--- a/ArchiTechProperties/about.html
+++ b/ArchiTechProperties/about.html
@@ -22,8 +22,9 @@
 					<a href="index.html"><img alt="artchi tech logo" src="img/Logo.svg"></a>
 				</div>
 				<div class="nav-blured navigation">
+					<div class="mobile-icon js--nav-icon"><img alt="mobile hamburger icon" src="img/hamburger-icon.svg"></div>
 					<div>
-						<ul class="nav-pages">
+						<ul class="nav-pages js--main-nav">
 							<li><a href="real-estate.html">Real Estate</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="#">Contact</a></li>
