--- a/ArchiTechProperties/real-estate-2.html
+++ b/ArchiTechProperties/real-estate-2.html
@@ -14,6 +14,14 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/queries.css">
+		
+		<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+		<link rel="manifest" href="favicons/site.webmanifest">
+		<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
 	</head>
 	
 	<body class="r-e-2 back animate__animated animate__fadeInRight">
@@ -30,10 +38,10 @@
 						<li><a href="#">Contact</a></li>
 					</ul>
 					<ul class="soc-icons-pages">
-						<li><a href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
-						<li><a href="#"></a><img alt="facebook artchi tech" src="img/facebook.svg"></li>
-						<li><a href="#"></a><img alt="instagram artchi tech" src="img/instagram.svg"></li>
-						<li><a href="#"><img alt="twitter artchi tech" src="img/twitter.svg"></a></li>
+						<li><a target="_blank" href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
+						<li><a target="_blank" href="https://www.facebook.com/"><img alt="facebook artchi tech" src="img/facebook.svg"></a></li>
+						<li><a target="_blank" href="https://www.instagram.com/"><img alt="instagram artchi tech" src="img/instagram.svg"></a></li>
+						<li><a target="_blank" href="https://www.twitter.com/"><img alt="twitter artchi tech" src="img/twitter.svg"></a></li>
 					</ul>
 				</div>
 			</div>
