--- a/ArchiTechProperties/index.html
+++ b/ArchiTechProperties/index.html
@@ -12,6 +12,15 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/queries.css">
+		
+		<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+		<link rel="manifest" href="favicons/site.webmanifest">
+		<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
+		
 	</head>
 	
 	<body class="animate__animated animate__slideInDown">
@@ -21,7 +30,7 @@
 					<div class="logo-mobile">
 							<img alt="artchi tech logo" src="img/Logo.svg">
 					</div>
-					<div class="mobile-manu-icon js--nav-icon"><img alt="mobile hamburger icon" src="img/hamburger-icon.svg"></div>
+					<div img class="mobile-manu-icon js--nav-icon"><img alt="mobile hamburger icon" src="img/hamburger-icon.svg"></div>
 					<div>
 						<ul class="menu-mobile js--main-nav">
 							<li><a href="real-estate.html">Real Estate</a></li>
@@ -42,19 +51,19 @@
 							<img alt="artchi tech logo" src="img/Logo.svg">
 						</div>
 						<ul class="social-icons">
-							<li><a href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
-							<li><a href="#"></a><img alt="facebook artchi tech" src="img/facebook.svg"></li>
-							<li><a href="#"></a><img alt="instagram artchi tech" src="img/instagram.svg"></li>
-							<li><a href="#"><img alt="twitter artchi tech" src="img/twitter.svg"></a></li>
+							<li><a target="_blank" href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
+							<li><a target="_blank" href="https://www.facebook.com/"><img alt="facebook artchi tech" src="img/facebook.svg"></a></li>
+							<li><a target="_blank" href="https://www.instagram.com/"><img alt="instagram artchi tech" src="img/instagram.svg"></a></li>
+							<li><a target="_blank" href="https://www.twitter.com/"><img alt="twitter artchi tech" src="img/twitter.svg"></a></li>
 						</ul>
 					</div>
 				</nav>
 				<footer>
 					<ul class="social-mobile">
-						<li><a href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
-						<li><a href="#"></a><img alt="facebook artchi tech" src="img/facebook.svg"></li>
-						<li><a href="#"></a><img alt="instagram artchi tech" src="img/instagram.svg"></li>
-						<li><a href="#"><img alt="twitter artchi tech" src="img/twitter.svg"></a></li>
+						<li><a target="_blank" href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
+						<li><a target="_blank" href="https://www.facebook.com/"><img alt="facebook artchi tech" src="img/facebook.svg"></a></li>
+						<li><a target="_blank" href="https://www.instagram.com/"><img alt="instagram artchi tech" src="img/instagram.svg"></a></li>
+						<li><a target="_blank" href="https://www.twitter.com/"><img alt="twitter artchi tech" src="img/twitter.svg"></a></li>
 					</ul>
 				</footer>
 			</div>
