Page transitions added

--- a/ArchiTechProperties/real-estate-8.html
+++ b/ArchiTechProperties/real-estate-8.html
@@ -28,15 +28,15 @@
 	<body class="animate__animated animate__fadeInRight r-e-8 back">
 		<header>
 			<div class="logo-pages">
-				<a href="index.html"><img alt="artchi tech logo" src="img/Logo.svg"></a>
+				<a href="index.html#down"><img alt="artchi tech logo" src="img/Logo.svg"></a>
 			</div>
 			<div class="navigation">
 				<div class="mobile-icon js--nav-icon"><img alt="mobile hamburger icon" src="img/hamburger-icon.svg"></div>
 				<div>
 					<ul class="nav-pages js--main-nav">
-						<li><a href="real-estate.html">Real Estate</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="real-estate.html#right">Real Estate</a></li>
+						<li><a href="about.html#down">About</a></li>
+						<li><a href="contact.php#down">Contact</a></li>
 					</ul>
 					<ul class="soc-icons-pages">
 						<li><a target="_blank" href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
