--- a/ArchiTechProperties/index.html
+++ b/ArchiTechProperties/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="bck">
+<html class="bck animate__animated">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
 		
 	</head>
 	
-	<body class="animate__animated animate__slideInDown">
+	<body>
 		<div>
 			<div class="hero bckg1">
 				<nav class="mobile-nav">
@@ -33,9 +33,9 @@
 					<div img class="mobile-manu-icon js--nav-icon"><img alt="mobile hamburger icon" src="img/hamburger-icon.svg"></div>
 					<div>
 						<ul class="menu-mobile js--main-nav">
-							<li><a href="real-estate.html">Real Estate</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="real-estate.html#up">Real Estate</a></li>
+							<li><a href="about.html#up">About</a></li>
+							<li><a href="contact.php#up">Contact</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -43,9 +43,9 @@
 				<nav class="main-nav">
 					<div class="nav-content">
 						<ul class="menu">
-							<li><a href="real-estate.html">Real Estate</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="real-estate.html#up">Real Estate</a></li>
+							<li><a href="about.html#up">About</a></li>
+							<li><a href="contact.php#up">Contact</a></li>
 						</ul>
 						<div class="logo">
 							<img alt="artchi tech logo" src="img/Logo.svg">
