--- a/ArchiTechProperties/real-estate.html
+++ b/ArchiTechProperties/real-estate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="bck" >
+<html class="bck animate__animated">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,19 +24,19 @@
 		<meta name="theme-color" content="#ffffff">
 	</head>
 	
-	<body class="animate__animated animate__fadeInUp">
+	<body>
 		<div>
 			<header>
 				<div class="logo-pages">
-					<a href="index.html"><img alt="artchi tech logo" src="img/Logo.svg"></a>
+					<a href="index.html#down"><img alt="artchi tech logo" src="img/Logo.svg"></a>
 				</div>
 				<div class="nav-blured navigation">
 					<div class="mobile-icon js--nav-icon"><img alt="mobile hamburger icon" src="img/hamburger-icon.svg"></div>
 					<div>
 						<ul class="nav-pages js--main-nav">
-							<li><a href="real-estate.html">Real Estate</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="#">Real Estate</a></li>
+							<li><a href="about.html#left">About</a></li>
+							<li><a href="contact.php#left">Contact</a></li>
 						</ul>
 						<ul class="soc-icons-pages">
 							<li><a target="_blank" href="mailto:vicentijevic.j@gmail.com"><img alt="email artchi tech" src="img/mail.svg"></a></li>
